<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="hello">Hello World, layout!</string> -->
    <string name="app_name">POClient</string>
    <!-- 两版本发布修改处 7-5-->
    <!-- <string name="app_name">dFiM</string> -->
	<!-- <string name="app_name">真现BOX</string> -->
    <string name="appName">Cling Browser</string>
    <string name="deviceDetails">Device Details</string>
    <string name="searchLAN">Search LAN</string>
    <string name="switchRouter">Network On/Off</string>
    <string name="toggleDebugLogging">Toggle debug logging</string>
    <string name="OK">OK</string>
    <string name="use_it">USE_IT</string>
    
    <string name="deviceDetailsNotYetAvailable">Device details are being discovered, please wait.</string>
    <string name="babyNotMine">设备连接已被占用，是否重连？</string>
    
    <string name="mosReasonPlaylist">歌单同步功能将在稍后开放</string>
    <string name="mosReasonListen">网络试听同步功能将在稍后开放</string>
    <string name="willGetBackCloudMusic">设备正在缓存音乐</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="pleaseEnter">请输入汉字首字母或完整英文单词</string>
    <string name="noSearchResult">很抱歉，没有找到你想要的</string>
    <string name="freeBtnText">缓存</string>
    <string name="willCache">缓存中</string>
    <string name="brushSearchResult">刷新列表</string>

    <!-- 外联设备 -->
    <string name="usb_tabname">外联设备</string>
    <string name="filePathLabel">文件路径</string>
    <string name="fileinfo">文件信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="login_logo">login_logo</string>
    <string name="login_hint_choose">请选择您的dFiM</string>
    <!-- 两版本发布修改处 7-6
	<string name="login_hint_choose">请选择您的dFiM</string> 
	<string name="login_hint_choose">请选择您的真现BOX</string> 
	-->
	
    <string name="device_accessing_removed">原有设备已被移除，请重新选择设备</string>
    <string name="streamclient_timeout_or_failure">连接失败，请检查设备的网络状态</string>
    <string name="im_out_of_network">您的移动设备已掉线！</string>
    <string name="login_hint_synchronizing">正在同步数据</string>
    <string name="login_loading">搜索中</string>
    <string name="login_hint_search_error">搜索设备失败，请检查WIFI是否连接</string>
    <string name="login_error_search_device">搜索设备</string>
    <string name="login_error_research_hint">连接超时，请重新搜索您的设备</string>
    <string name="login_reconnect">搜索</string>
    <string name="login_retry">重试</string>
    <string name="login_hint_sync_complete">同步完成</string>
    <string name="get_balance_failure">未能读取余额，请检查您的网络</string>
    <string name="get_commodity_info_failure">未能获取商品信息</string>
    <string name="syn_failure">未能同步：与设备通信失败</string>
    
    <!-- 专辑简介 -->
    <string name="album_introduciton">专辑简介</string>
    <string name="album_introduciton_artist">演出者：</string>
    <string name="album_introduciton_publishtime">发行时间：</string>
    <string name="album_introduciton_language">语言：</string>
    <string name="album_introduciton_company">唱片公司：</string>
    
    <!--  -->
    <string name="album">专辑</string>
    <string name="clear_search_history_failure">清空搜索记录失败</string>

    <!-- MainActivity -->
    <string name="viewpager">ViewPager</string> 
     <string name="box_update_notification_title">您的设备需要升级</string>
    
    
    <!-- exit dialog -->
    <string name="exit_dialog_title">退出程序</string>
    <string name="exit_dialog_message">确认退出程序吗？</string>
    
    <!-- 盒子升级 -->
    <string name="box_version_low">设备版本过低\n请升级后再连接</string>
    
    <!-- 控制端升级 -->
    <string name="controller_version_update_dialog_title">检测到新版本</string>
    <string name="controller_version_update_dialog_positive">以后再说</string>
    <string name="controller_version_update_dialog_negative">立即更新</string>

</resources>