<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/translucent_black"
    android:gravity="center"
    android:orientation="horizontal" >

    <!-- 左空白区域 -->

    <LinearLayout
        android:id="@+id/ll_left"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- 上空白区域 -->

        <LinearLayout
            android:id="@+id/ll_up"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <!-- 中央播放器 -->

        <LinearLayout
            android:layout_width="@dimen/mini_player_width"
            android:layout_height="@dimen/mini_player_height"
            android:background="@color/icecream_bg"
            android:orientation="vertical" >

            <TextView
                style="@style/AlbumIntroductionTitle"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/dark_green1"
                android:gravity="center"
                android:text="@string/album_introduciton"
                android:textColor="@android:color/white" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:scrollbars="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/album_introduction_bottompadding"
                    android:paddingLeft="@dimen/album_introduction_leftpadding"
                    android:paddingRight="@dimen/album_introduction_leftpadding"
                    android:paddingTop="@dimen/album_introduction_toppadding" >

                    <!-- 艺人 -->

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/album_introduction_small_margintop"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/album_introduciton_artist" />

                        <TextView
                            android:id="@+id/tv_artist"
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:layout_weight="2"
                            android:text="路人甲" />
                    </LinearLayout>

                    <!-- 发行时间 -->

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/album_introduction_small_margintop"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/album_introduciton_publishtime" />

                        <TextView
                            android:id="@+id/tv_publishtime"
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:layout_weight="2"
                            android:text="0000年00月00日" />
                    </LinearLayout>
                    <!-- 语种 -->

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/album_introduction_small_margintop"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/album_introduciton_language" />

                        <TextView
                            android:id="@+id/tv_language"
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:layout_weight="2"
                            android:text="中文" />
                    </LinearLayout>
                    <!-- 唱片公司 -->

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/album_introduction_small_margintop"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/album_introduciton_company" />

                        <TextView
                            android:id="@+id/tv_company"
                            style="@style/AlbumIntroductionText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:layout_weight="2"
                            android:text="华夏天奇数字科技有限公司" />
                    </LinearLayout>

                    <!-- 简介 -->

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/album_introduction_large_margintop"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_text"
                            style="@style/AlbumIntroductionText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="\t\t华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司华夏天奇数字科技有限公司" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <!-- 下空白区域 -->

        <LinearLayout
            android:id="@+id/ll_down"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" />
    </LinearLayout>

    <!-- 右空白区域 -->

    <LinearLayout
        android:id="@+id/ll_right"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" />

</LinearLayout>